altered mpsQuote to store finalTotal costs for libConstruction, sequencing, additional costs, total discounts, and computational cost. Also re-worked PDFServiceImpl to set these values and use these values in the development of the quote and its pdf