@@ -126,32 +126,12 @@ public class PDFServiceImpl extends WaspServiceImpl implements PDFService{
  	    jobDetailsParagraph = addMPSDetailsToJobDetailsParagraph(job, jobDetailsParagraph);//add msp-specific info to the jobDetails paragraph
  	    document.add(jobDetailsParagraph);//add the paragraph to the document
  	 
- 	    //note; as of 12-12-14, libraryConstructionAndAnalysisTotalCost is not really used anymore, as we have had to separate out the two (analysis is not covered by institutional cost share). 
- 	    //Integer libraryConstructionAndAnalysisTotalCost = addSubmittedSamplesMultiplexRequestAndLibraryCostsAsTable(document, mpsQuote);
- 	    List<Integer> libraryConstructionAndSeqAnalysisTotalCostsInThatOrderList = addSubmittedSamplesMultiplexRequestAndLibraryCostsAsTable(document, mpsQuote);
- 	    Assert.assertTrue(libraryConstructionAndSeqAnalysisTotalCostsInThatOrderList.size()==2);
- 	    Integer libraryConstructionTotalCost = libraryConstructionAndSeqAnalysisTotalCostsInThatOrderList.get(0);
- 	    Integer sequenceAnalysisTotalCost = libraryConstructionAndSeqAnalysisTotalCostsInThatOrderList.get(1);//this is computational analysis
- 	    Integer sequenceRunsTotalCost = addSequenceRunsAndCostAsTable(document, mpsQuote);
- 	    Integer additionalTotalCost = addAdditionalCostsAsTable(document, mpsQuote);
- 	    
- 	    addCommentsAsTable(document, mpsQuote);
- 	   
- 	    List<String> costReasonListExcludingAnalysis = new ArrayList<String>();
- 	    Map<String, Integer> costReasonPriceMapExcludingAnalysis = new HashMap<String, Integer>();
- 	    //costReasonList.add("Total Library Construction & Analysis Costs");
- 	    //costReasonPriceMap.put("Total Library Construction & Analysis Costs",libraryConstructionAndAnalysisTotalCost);
- 	    costReasonListExcludingAnalysis.add("Library Construction");
- 	    costReasonPriceMapExcludingAnalysis.put("Library Construction", libraryConstructionTotalCost);
- 	    costReasonListExcludingAnalysis.add("Sequencing");
- 		costReasonPriceMapExcludingAnalysis.put("Sequencing",sequenceRunsTotalCost);
- 	    
- 	    if(additionalTotalCost>0){
- 	    	costReasonListExcludingAnalysis.add("Additional Costs");
- 	    	costReasonPriceMapExcludingAnalysis.put("Additional Costs",additionalTotalCost);
- 	    } 
- 	    Integer totalFinalCost = addCostSummaryTable(document, mpsQuote, costReasonListExcludingAnalysis, costReasonPriceMapExcludingAnalysis, sequenceAnalysisTotalCost);
- 	    mpsQuote.setTotalFinalCost(totalFinalCost);
+ 	    //create/add the various cost tables to the pdf and in addition record the various total costs in mpsQuote
+ 	    addSubmittedSamplesMultiplexRequestAndLibraryCostsAsTable(document, mpsQuote);
+ 	    addSequenceRunsAndCostAsTable(document, mpsQuote);
+ 	    addAdditionalCostsAsTable(document, mpsQuote); 	    
+ 	    addCommentsAsTable(document, mpsQuote); 	   
+ 	    addCostSummaryTable(document, mpsQuote);
  	    
  	    document.close();		
 	}
@@ -382,8 +362,7 @@ public class PDFServiceImpl extends WaspServiceImpl implements PDFService{
 		return jobDetailsParagraph;
 	}
 	
-	//private Integer addSubmittedSamplesMultiplexRequestAndLibraryCostsAsTable(Document document, MPSQuote mpsQuote) throws DocumentException{
-	private List<Integer> addSubmittedSamplesMultiplexRequestAndLibraryCostsAsTable(Document document, MPSQuote mpsQuote) throws DocumentException{
+	private void addSubmittedSamplesMultiplexRequestAndLibraryCostsAsTable(Document document, MPSQuote mpsQuote) throws DocumentException{
 		
 	 	Paragraph sampleLibraryTitle = new Paragraph();
 	 	sampleLibraryTitle.setSpacingBefore(5);
@@ -393,7 +372,6 @@ public class PDFServiceImpl extends WaspServiceImpl implements PDFService{
 	 	
 	 	PdfPTable sampleLibraryTable = new PdfPTable(6);
 	 	sampleLibraryTable.setHorizontalAlignment(Element.ALIGN_LEFT);
-	 	//////////sampleLibraryTable.setWidths(new float[]{0.3f, 1.7f, 0.7f, 0.8f, 0.8f, 0.8f, 1.0f});
 	 	sampleLibraryTable.setWidths(new float[]{0.3f, 1.7f, 0.7f, 0.8f, 1.0f, 1.0f});
 	 	sampleLibraryTable.setWidthPercentage(100f);
 		PdfPCell cellNo = new PdfPCell(new Phrase("No.", NORMAL_BOLD));
@@ -414,19 +392,14 @@ public class PDFServiceImpl extends WaspServiceImpl implements PDFService{
 		PdfPCell libAnalysisCostCell = new PdfPCell(new Phrase("Computational Analysis", NORMAL_BOLD));
 		libAnalysisCostCell.setHorizontalAlignment(Element.ALIGN_CENTER);
 		sampleLibraryTable.addCell(libAnalysisCostCell);
-		////////PdfPCell libTotalCostCell = new PdfPCell(new Phrase("Library Total", NORMAL_BOLD));
-		////////////libTotalCostCell.setHorizontalAlignment(Element.ALIGN_CENTER);
-		///////////////sampleLibraryTable.addCell(libTotalCostCell);
 
 		int sampleCounter = 1;
-		int cumulativeCostForAllLibraries = 0;//this is library construction plus analysis; no longer needed (12-12-14)
 		int cumulativeCostForAllLibraryConstructions = 0;
-		int cumulativeCostForAllLibraryAnalyses = 0;
+		int cumulativeCostForAllLibraryComputationalAnalyses = 0;
 		Map<Sample,String> coverageMap = jobService.getCoverageMap(jobService.getJobByJobId(mpsQuote.getJobId()));//a user-submitted request: which samples are to be run on which lanes 
 		String currencyIcon = mpsQuote.getLocalCurrencyIcon();
 
 		for(LibraryCost libraryCost : mpsQuote.getLibraryCosts()){
-			int totalLibCost = 0;
 			sampleLibraryTable.addCell(new Phrase(""+sampleCounter, NORMAL));
 			sampleLibraryTable.addCell(new Phrase(libraryCost.getSampleName(), NORMAL));
 			sampleLibraryTable.addCell(new Phrase(libraryCost.getMaterial(), NORMAL));
@@ -450,11 +423,9 @@ public class PDFServiceImpl extends WaspServiceImpl implements PDFService{
 
 			PdfPCell cost = null;
 			if(libraryCost.getReasonForNoLibraryCost().isEmpty()){
-				Integer libCost = new Integer(libraryCost.getLibraryCost().intValue());//convert the Float to Integer
-				cumulativeCostForAllLibraries += libCost.intValue();
-				cumulativeCostForAllLibraryConstructions += libCost.intValue();
-				totalLibCost += libCost.intValue();
-				cost = new PdfPCell(new Phrase(currencyIcon+" "+libCost.toString(), NORMAL));
+				Integer libConstructionCost = new Integer(libraryCost.getLibraryCost().intValue());//convert the Float to Integer
+				cumulativeCostForAllLibraryConstructions += libConstructionCost.intValue();
+				cost = new PdfPCell(new Phrase(currencyIcon+" "+libConstructionCost.toString(), NORMAL));
 			}
 			else{
 				cost = new PdfPCell(new Phrase(libraryCost.getReasonForNoLibraryCost(), NORMAL)); 				
@@ -462,206 +433,200 @@ public class PDFServiceImpl extends WaspServiceImpl implements PDFService{
 			cost.setHorizontalAlignment(Element.ALIGN_RIGHT);
 			sampleLibraryTable.addCell(cost);
 			
-			Integer libAnalysisCost = new Integer(libraryCost.getAnalysisCost().intValue());//convert the Float to Integer
-			cumulativeCostForAllLibraries += libAnalysisCost.intValue();
-			cumulativeCostForAllLibraryAnalyses += libAnalysisCost.intValue();
-			totalLibCost += libAnalysisCost.intValue();
-			PdfPCell analysisCost = new PdfPCell(new Phrase(currencyIcon+" "+libAnalysisCost.toString(), NORMAL));
+			Integer libComputationalAnalysisCost = new Integer(libraryCost.getAnalysisCost().intValue());//convert the Float to Integer
+			cumulativeCostForAllLibraryComputationalAnalyses += libComputationalAnalysisCost.intValue();
+			PdfPCell analysisCost = new PdfPCell(new Phrase(currencyIcon+" "+libComputationalAnalysisCost.toString(), NORMAL));
 			analysisCost.setHorizontalAlignment(Element.ALIGN_RIGHT);
 			sampleLibraryTable.addCell(analysisCost);
-			
-			//////////PdfPCell libTotal = new PdfPCell(new Phrase(currencyIcon+" "+totalLibCost, NORMAL_BOLD));
-			/////////libTotal.setHorizontalAlignment(Element.ALIGN_RIGHT);
-			//////////sampleLibraryTable.addCell(libTotal);
 			
 			sampleCounter++;
 		}
 		
+		//display
 		for(int i = 0; i < 4; i++){//4 empty cells with no border
 			PdfPCell cell = new PdfPCell(new Phrase(""));
 			cell.setBorder(Rectangle.NO_BORDER);
 			sampleLibraryTable.addCell(cell);
 		}
 		
+		//this is total library construction cost
 		PdfPCell cumulativeLibraryConstructionCost = new PdfPCell(new Phrase("Total: " + currencyIcon+" "+cumulativeCostForAllLibraryConstructions, NORMAL_BOLD));
 		cumulativeLibraryConstructionCost.setHorizontalAlignment(Element.ALIGN_RIGHT);
 		cumulativeLibraryConstructionCost.setBorderWidth(2f);
 		cumulativeLibraryConstructionCost.setBorderColor(BaseColor.BLACK);
 		sampleLibraryTable.addCell(cumulativeLibraryConstructionCost);
 		
-		//this is computational analysis (sequence analysis)
-		PdfPCell cumulativeLibraryAnalysisCost = new PdfPCell(new Phrase("Total: " + currencyIcon+" "+cumulativeCostForAllLibraryAnalyses, NORMAL_BOLD));
+		//this is total computational analysis cost (sequence analysis)
+		PdfPCell cumulativeLibraryAnalysisCost = new PdfPCell(new Phrase("Total: " + currencyIcon+" "+cumulativeCostForAllLibraryComputationalAnalyses, NORMAL_BOLD));
 		cumulativeLibraryAnalysisCost.setHorizontalAlignment(Element.ALIGN_RIGHT);
 		cumulativeLibraryAnalysisCost.setBorderWidth(2f);
 		cumulativeLibraryAnalysisCost.setBorderColor(BaseColor.BLACK);
 		sampleLibraryTable.addCell(cumulativeLibraryAnalysisCost);
-		
-		/////////PdfPCell cumulativeCost = new PdfPCell(new Phrase("Total: " + currencyIcon+" "+cumulativeCostForAllLibraries, NORMAL_BOLD));
-		/////////cumulativeCost.setHorizontalAlignment(Element.ALIGN_RIGHT);
-		////////////cumulativeCost.setBorderWidth(2f);
-		/////////////cumulativeCost.setBorderColor(BaseColor.BLACK);
-		////////////sampleLibraryTable.addCell(cumulativeCost);
-			
+					
 		document.add(sampleLibraryTable);
 
-		List<Integer> libraryConstructionAndSeqAnalysisTotalCostsInThatOrderList = new ArrayList<Integer>(); 
-		libraryConstructionAndSeqAnalysisTotalCostsInThatOrderList.add(Integer.valueOf(cumulativeCostForAllLibraryConstructions));
-		libraryConstructionAndSeqAnalysisTotalCostsInThatOrderList.add(Integer.valueOf(cumulativeCostForAllLibraryAnalyses));
-		return libraryConstructionAndSeqAnalysisTotalCostsInThatOrderList;
-		//return new Integer (cumulativeCostForAllLibraries);//this is library construction plus analysis; no longer needed
+		//do not forget to do this:
+		//record totalLibraryConstructionCost and totlaComputationalCost in mpsQuote for later use in the generation of summary cost for this pdf AND for database storage
+		mpsQuote.setTotalLibraryConstructionCost(Integer.valueOf(cumulativeCostForAllLibraryConstructions));
+		mpsQuote.setTotalComputationalCost(Integer.valueOf(cumulativeCostForAllLibraryComputationalAnalyses));
+
 	}
 	
-	private Integer addSequenceRunsAndCostAsTable(Document document, MPSQuote mpsQuote) throws DocumentException{
+	private void addSequenceRunsAndCostAsTable(Document document, MPSQuote mpsQuote) throws DocumentException{
 		
 		int cumulativeCostForAllSequenceRuns = 0;
 		
 		List<SequencingCost> sequencingCosts = mpsQuote.getSequencingCosts();
 		
-	 	Paragraph sequenceRunTitle = new Paragraph();
-	 	sequenceRunTitle.setSpacingBefore(5);
-	 	sequenceRunTitle.setSpacingAfter(5);
-	 	if(sequencingCosts.size()==0){
-		 	sequenceRunTitle.add(new Chunk("Sequence Runs: No Sequence Runs To Be Performed", NORMAL_BOLD));
+	 	if(sequencingCosts.size()>0){//write to pdf only if there is something to write
+	 		
+	 		Paragraph sequenceRunTitle = new Paragraph();
+		 	sequenceRunTitle.setSpacingBefore(5);
+		 	sequenceRunTitle.setSpacingAfter(5);
+		 	sequenceRunTitle.add(new Chunk("Sequence Runs And Costs:", NORMAL_BOLD));
 		 	document.add(sequenceRunTitle);
-		 	return cumulativeCostForAllSequenceRuns;
+	
+		 	PdfPTable runTable = new PdfPTable(7);
+		 	runTable.setHorizontalAlignment(Element.ALIGN_LEFT);
+		 	runTable.setWidths(new float[]{0.3f, 1.1f, 0.4f, 0.5f, 0.4f, 0.6f, 0.9f});
+		 	runTable.setWidthPercentage(100f);
+			PdfPCell cellRunNo = new PdfPCell(new Phrase("No.", NORMAL_BOLD));
+			cellRunNo.setHorizontalAlignment(Element.ALIGN_CENTER);
+			runTable.addCell(cellRunNo);
+			PdfPCell cellMachine = new PdfPCell(new Phrase("Machine", NORMAL_BOLD));
+			cellMachine.setHorizontalAlignment(Element.ALIGN_CENTER);
+			runTable.addCell(cellMachine);
+			PdfPCell cellReadLength = new PdfPCell(new Phrase("Length", NORMAL_BOLD));
+			cellReadLength.setHorizontalAlignment(Element.ALIGN_CENTER);
+			runTable.addCell(cellReadLength);
+			PdfPCell cellReadType = new PdfPCell(new Phrase("Type", NORMAL_BOLD));
+			cellReadType.setHorizontalAlignment(Element.ALIGN_CENTER);
+			runTable.addCell(cellReadType);
+			PdfPCell cellNumLanes = new PdfPCell(new Phrase("Lanes", NORMAL_BOLD));
+			cellNumLanes.setHorizontalAlignment(Element.ALIGN_CENTER);
+			runTable.addCell(cellNumLanes);
+			PdfPCell cellPricePerLane = new PdfPCell(new Phrase("Cost/Lane", NORMAL_BOLD));
+			cellPricePerLane.setHorizontalAlignment(Element.ALIGN_CENTER);
+			runTable.addCell(cellPricePerLane);
+			PdfPCell totalPerRun = new PdfPCell(new Phrase("Cost/Run", NORMAL_BOLD));
+			totalPerRun.setHorizontalAlignment(Element.ALIGN_CENTER);
+			runTable.addCell(totalPerRun);
+	
+			int runCounter = 1;
+			String currencyIcon = mpsQuote.getLocalCurrencyIcon();
+	
+			for(SequencingCost sequencingCost : sequencingCosts){
+				runTable.addCell(new Phrase(""+runCounter, NORMAL));
+				runTable.addCell(new Phrase(sequencingCost.getResourceCategory().getName() + "\n(run-type:" + sequencingCost.getRunType() + ")", NORMAL));//run-type is printed on next line
+				runTable.addCell(new Phrase(sequencingCost.getReadLength().toString(), NORMAL));
+				runTable.addCell(new Phrase(sequencingCost.getReadType(), NORMAL));
+				Integer numLanes = sequencingCost.getNumberOfLanes();
+				runTable.addCell(new Phrase(numLanes.toString(), NORMAL));
+				Integer pricePerLane = new Integer(sequencingCost.getCostPerLane().intValue());			
+				//runTable.addCell(new Phrase(currencyIcon + " " + pricePerLane.toString(), NORMAL));
+				PdfPCell pricePerLaneCell = new PdfPCell(new Phrase(currencyIcon + " " + pricePerLane.toString(), NORMAL));
+				pricePerLaneCell.setHorizontalAlignment(Element.ALIGN_RIGHT);
+				runTable.addCell(pricePerLaneCell);
+				Integer totalCostPerSequenceRun = numLanes * pricePerLane;
+				PdfPCell totalCostPerSequenceRunCell = new PdfPCell(new Phrase(currencyIcon + " " + totalCostPerSequenceRun.toString(), NORMAL));
+				totalCostPerSequenceRunCell.setHorizontalAlignment(Element.ALIGN_RIGHT);
+				runTable.addCell(totalCostPerSequenceRunCell);
+					
+				cumulativeCostForAllSequenceRuns += totalCostPerSequenceRun.intValue();
+				runCounter++;
+			}
+			for(int i = 0; i < 6; i++){//6 empty cells with no border
+				PdfPCell cell = new PdfPCell(new Phrase(""));
+				cell.setBorder(Rectangle.NO_BORDER);
+				runTable.addCell(cell);
+			}
+			PdfPCell totalRunCost = new PdfPCell(new Phrase("Total: " + currencyIcon+" "+cumulativeCostForAllSequenceRuns, NORMAL_BOLD));
+			totalRunCost.setHorizontalAlignment(Element.ALIGN_RIGHT);
+			totalRunCost.setBorderWidth(2f);
+			totalRunCost.setBorderColor(BaseColor.BLACK);
+			runTable.addCell(totalRunCost);
+	
+			document.add(runTable);	
 	 	}
-	 	sequenceRunTitle.add(new Chunk("Sequence Runs And Costs:", NORMAL_BOLD));
-	 	document.add(sequenceRunTitle);
-
-	 	PdfPTable runTable = new PdfPTable(7);
-	 	runTable.setHorizontalAlignment(Element.ALIGN_LEFT);
-	 	runTable.setWidths(new float[]{0.3f, 1.1f, 0.4f, 0.5f, 0.4f, 0.6f, 0.9f});
-	 	runTable.setWidthPercentage(100f);
-		PdfPCell cellRunNo = new PdfPCell(new Phrase("No.", NORMAL_BOLD));
-		cellRunNo.setHorizontalAlignment(Element.ALIGN_CENTER);
-		runTable.addCell(cellRunNo);
-		PdfPCell cellMachine = new PdfPCell(new Phrase("Machine", NORMAL_BOLD));
-		cellMachine.setHorizontalAlignment(Element.ALIGN_CENTER);
-		runTable.addCell(cellMachine);
-		PdfPCell cellReadLength = new PdfPCell(new Phrase("Length", NORMAL_BOLD));
-		cellReadLength.setHorizontalAlignment(Element.ALIGN_CENTER);
-		runTable.addCell(cellReadLength);
-		PdfPCell cellReadType = new PdfPCell(new Phrase("Type", NORMAL_BOLD));
-		cellReadType.setHorizontalAlignment(Element.ALIGN_CENTER);
-		runTable.addCell(cellReadType);
-		PdfPCell cellNumLanes = new PdfPCell(new Phrase("Lanes", NORMAL_BOLD));
-		cellNumLanes.setHorizontalAlignment(Element.ALIGN_CENTER);
-		runTable.addCell(cellNumLanes);
-		PdfPCell cellPricePerLane = new PdfPCell(new Phrase("Cost/Lane", NORMAL_BOLD));
-		cellPricePerLane.setHorizontalAlignment(Element.ALIGN_CENTER);
-		runTable.addCell(cellPricePerLane);
-		PdfPCell totalPerRun = new PdfPCell(new Phrase("Cost/Run", NORMAL_BOLD));
-		totalPerRun.setHorizontalAlignment(Element.ALIGN_CENTER);
-		runTable.addCell(totalPerRun);
-
-		int runCounter = 1;
-		String currencyIcon = mpsQuote.getLocalCurrencyIcon();
-
-		for(SequencingCost sequencingCost : sequencingCosts){
-			runTable.addCell(new Phrase(""+runCounter, NORMAL));
-			runTable.addCell(new Phrase(sequencingCost.getResourceCategory().getName() + "\n(run-type:" + sequencingCost.getRunType() + ")", NORMAL));//run-type is printed on next line
-			runTable.addCell(new Phrase(sequencingCost.getReadLength().toString(), NORMAL));
-			runTable.addCell(new Phrase(sequencingCost.getReadType(), NORMAL));
-			Integer numLanes = sequencingCost.getNumberOfLanes();
-			runTable.addCell(new Phrase(numLanes.toString(), NORMAL));
-			Integer pricePerLane = new Integer(sequencingCost.getCostPerLane().intValue());			
-			//runTable.addCell(new Phrase(currencyIcon + " " + pricePerLane.toString(), NORMAL));
-			PdfPCell pricePerLaneCell = new PdfPCell(new Phrase(currencyIcon + " " + pricePerLane.toString(), NORMAL));
-			pricePerLaneCell.setHorizontalAlignment(Element.ALIGN_RIGHT);
-			runTable.addCell(pricePerLaneCell);
-			Integer totalCostPerSequenceRun = numLanes * pricePerLane;
-			PdfPCell totalCostPerSequenceRunCell = new PdfPCell(new Phrase(currencyIcon + " " + totalCostPerSequenceRun.toString(), NORMAL));
-			totalCostPerSequenceRunCell.setHorizontalAlignment(Element.ALIGN_RIGHT);
-			runTable.addCell(totalCostPerSequenceRunCell);
-				
-			cumulativeCostForAllSequenceRuns += totalCostPerSequenceRun.intValue();
-			runCounter++;
-		}
-		for(int i = 0; i < 6; i++){//6 empty cells with no border
-			PdfPCell cell = new PdfPCell(new Phrase(""));
-			cell.setBorder(Rectangle.NO_BORDER);
-			runTable.addCell(cell);
-		}
-		PdfPCell totalRunCost = new PdfPCell(new Phrase("Total: " + currencyIcon+" "+cumulativeCostForAllSequenceRuns, NORMAL_BOLD));
-		totalRunCost.setHorizontalAlignment(Element.ALIGN_RIGHT);
-		totalRunCost.setBorderWidth(2f);
-		totalRunCost.setBorderColor(BaseColor.BLACK);
-		runTable.addCell(totalRunCost);
-
-		document.add(runTable);		
-		return new Integer(cumulativeCostForAllSequenceRuns);
+	 	
+		//do NOT forget this:
+		//record totalSequenceRunCost in mpsQuote for later use in the generation of summary cost for this pdf AND for database storage
+		mpsQuote.setTotalSequenceRunCost(Integer.valueOf(cumulativeCostForAllSequenceRuns));		
 	}
 	
-	private Integer addAdditionalCostsAsTable(Document document, MPSQuote mpsQuote) throws DocumentException{
+	private void addAdditionalCostsAsTable(Document document, MPSQuote mpsQuote) throws DocumentException{
 
 		int cumulativeAdditionalCost = 0;
 
 		List<AdditionalCost>  additionalCosts = mpsQuote.getAdditionalCosts();
 		
-		if(additionalCosts.size()==0){
-			return cumulativeAdditionalCost;
+		if(additionalCosts.size()>0){//write to pdf only if there is something to write
+		
+			Paragraph additionalCostTitle = new Paragraph();
+			additionalCostTitle.setSpacingBefore(5);
+			additionalCostTitle.setSpacingAfter(5);
+			additionalCostTitle.add(new Chunk("Additional Costs:", NORMAL_BOLD));
+			document.add(additionalCostTitle);
+			
+		 	PdfPTable additionalCostTable = new PdfPTable(5);
+		 	additionalCostTable.setHorizontalAlignment(Element.ALIGN_LEFT);
+		 	additionalCostTable.setWidths(new float[]{0.2f, 1.4f, 0.3f, 0.5f, 0.9f});
+		 	additionalCostTable.setWidthPercentage(100f);
+			PdfPCell celladditionalCostNo = new PdfPCell(new Phrase("No.", NORMAL_BOLD));
+			celladditionalCostNo.setHorizontalAlignment(Element.ALIGN_CENTER);
+			additionalCostTable.addCell(celladditionalCostNo);
+			PdfPCell cellReason = new PdfPCell(new Phrase("Reason", NORMAL_BOLD));
+			cellReason.setHorizontalAlignment(Element.ALIGN_CENTER);
+			additionalCostTable.addCell(cellReason);
+			PdfPCell cellUnits = new PdfPCell(new Phrase("Units", NORMAL_BOLD));
+			cellUnits.setHorizontalAlignment(Element.ALIGN_CENTER);
+			additionalCostTable.addCell(cellUnits);
+			PdfPCell cellCostPerUnit = new PdfPCell(new Phrase("Cost/Unit", NORMAL_BOLD));
+			cellCostPerUnit.setHorizontalAlignment(Element.ALIGN_CENTER);
+			additionalCostTable.addCell(cellCostPerUnit);
+			PdfPCell cellTotalCost = new PdfPCell(new Phrase("Additional Cost", NORMAL_BOLD));
+			cellTotalCost.setHorizontalAlignment(Element.ALIGN_CENTER);
+			additionalCostTable.addCell(cellTotalCost);
+			
+			int additionalCostCounter = 1;
+			String currencyIcon = mpsQuote.getLocalCurrencyIcon();
+	
+			for(AdditionalCost additionalCost : additionalCosts){
+				additionalCostTable.addCell(new Phrase(""+additionalCostCounter, NORMAL));
+				additionalCostTable.addCell(new Phrase(additionalCost.getReason(), NORMAL));
+				Integer units = additionalCost.getNumberOfUnits();
+				additionalCostTable.addCell(new Phrase(units.toString(), NORMAL));
+				Integer pricePerUnit = new Integer(additionalCost.getCostPerUnit().intValue());
+				///additionalCostTable.addCell(new Phrase(currencyIcon + " " + pricePerUnit.toString(), NORMAL));
+				PdfPCell pricePerUnitCell = new PdfPCell(new Phrase(currencyIcon + " " + pricePerUnit.toString(), NORMAL));
+				pricePerUnitCell.setHorizontalAlignment(Element.ALIGN_RIGHT);
+				additionalCostTable.addCell(pricePerUnitCell);			
+				Integer totalCostPerAdditionalCost = units * pricePerUnit;
+				PdfPCell totalCostPerAdditionalCostCell = new PdfPCell(new Phrase(currencyIcon + " " + totalCostPerAdditionalCost.toString(), NORMAL));
+				totalCostPerAdditionalCostCell.setHorizontalAlignment(Element.ALIGN_RIGHT);
+				additionalCostTable.addCell(totalCostPerAdditionalCostCell);
+					
+				cumulativeAdditionalCost += totalCostPerAdditionalCost.intValue();
+				additionalCostCounter++;
+			}
+			for(int i = 0; i < 4; i++){//4 empty cells with no border
+				PdfPCell cell = new PdfPCell(new Phrase(""));
+				cell.setBorder(Rectangle.NO_BORDER);
+				additionalCostTable.addCell(cell);
+			}
+			PdfPCell totalAdditionalCost = new PdfPCell(new Phrase("Total: " + currencyIcon+" "+cumulativeAdditionalCost, NORMAL_BOLD));
+			totalAdditionalCost.setHorizontalAlignment(Element.ALIGN_RIGHT);
+			totalAdditionalCost.setBorderWidth(2f);
+			totalAdditionalCost.setBorderColor(BaseColor.BLACK);
+			additionalCostTable.addCell(totalAdditionalCost);
+			
+			document.add(additionalCostTable);
 		}
 		
-		Paragraph additionalCostTitle = new Paragraph();
-		additionalCostTitle.setSpacingBefore(5);
-		additionalCostTitle.setSpacingAfter(5);
-		additionalCostTitle.add(new Chunk("Additional Costs:", NORMAL_BOLD));
-		document.add(additionalCostTitle);
-		
-	 	PdfPTable additionalCostTable = new PdfPTable(5);
-	 	additionalCostTable.setHorizontalAlignment(Element.ALIGN_LEFT);
-	 	additionalCostTable.setWidths(new float[]{0.2f, 1.4f, 0.3f, 0.5f, 0.9f});
-	 	additionalCostTable.setWidthPercentage(100f);
-		PdfPCell celladditionalCostNo = new PdfPCell(new Phrase("No.", NORMAL_BOLD));
-		celladditionalCostNo.setHorizontalAlignment(Element.ALIGN_CENTER);
-		additionalCostTable.addCell(celladditionalCostNo);
-		PdfPCell cellReason = new PdfPCell(new Phrase("Reason", NORMAL_BOLD));
-		cellReason.setHorizontalAlignment(Element.ALIGN_CENTER);
-		additionalCostTable.addCell(cellReason);
-		PdfPCell cellUnits = new PdfPCell(new Phrase("Units", NORMAL_BOLD));
-		cellUnits.setHorizontalAlignment(Element.ALIGN_CENTER);
-		additionalCostTable.addCell(cellUnits);
-		PdfPCell cellCostPerUnit = new PdfPCell(new Phrase("Cost/Unit", NORMAL_BOLD));
-		cellCostPerUnit.setHorizontalAlignment(Element.ALIGN_CENTER);
-		additionalCostTable.addCell(cellCostPerUnit);
-		PdfPCell cellTotalCost = new PdfPCell(new Phrase("Additional Cost", NORMAL_BOLD));
-		cellTotalCost.setHorizontalAlignment(Element.ALIGN_CENTER);
-		additionalCostTable.addCell(cellTotalCost);
-		
-		int additionalCostCounter = 1;
-		String currencyIcon = mpsQuote.getLocalCurrencyIcon();
+		//do NOT forget this:
+		//record totalAdditionalCost in mpsQuote for later use in the generation of summary cost for this pdf AND for database storage
+		mpsQuote.setTotalAdditionalCost(Integer.valueOf(cumulativeAdditionalCost));		
 
-		for(AdditionalCost additionalCost : additionalCosts){
-			additionalCostTable.addCell(new Phrase(""+additionalCostCounter, NORMAL));
-			additionalCostTable.addCell(new Phrase(additionalCost.getReason(), NORMAL));
-			Integer units = additionalCost.getNumberOfUnits();
-			additionalCostTable.addCell(new Phrase(units.toString(), NORMAL));
-			Integer pricePerUnit = new Integer(additionalCost.getCostPerUnit().intValue());
-			///additionalCostTable.addCell(new Phrase(currencyIcon + " " + pricePerUnit.toString(), NORMAL));
-			PdfPCell pricePerUnitCell = new PdfPCell(new Phrase(currencyIcon + " " + pricePerUnit.toString(), NORMAL));
-			pricePerUnitCell.setHorizontalAlignment(Element.ALIGN_RIGHT);
-			additionalCostTable.addCell(pricePerUnitCell);			
-			Integer totalCostPerAdditionalCost = units * pricePerUnit;
-			PdfPCell totalCostPerAdditionalCostCell = new PdfPCell(new Phrase(currencyIcon + " " + totalCostPerAdditionalCost.toString(), NORMAL));
-			totalCostPerAdditionalCostCell.setHorizontalAlignment(Element.ALIGN_RIGHT);
-			additionalCostTable.addCell(totalCostPerAdditionalCostCell);
-				
-			cumulativeAdditionalCost += totalCostPerAdditionalCost.intValue();
-			additionalCostCounter++;
-		}
-		for(int i = 0; i < 4; i++){//4 empty cells with no border
-			PdfPCell cell = new PdfPCell(new Phrase(""));
-			cell.setBorder(Rectangle.NO_BORDER);
-			additionalCostTable.addCell(cell);
-		}
-		PdfPCell totalAdditionalCost = new PdfPCell(new Phrase("Total: " + currencyIcon+" "+cumulativeAdditionalCost, NORMAL_BOLD));
-		totalAdditionalCost.setHorizontalAlignment(Element.ALIGN_RIGHT);
-		totalAdditionalCost.setBorderWidth(2f);
-		totalAdditionalCost.setBorderColor(BaseColor.BLACK);
-		additionalCostTable.addCell(totalAdditionalCost);
-		
-		document.add(additionalCostTable);
-		return new Integer(cumulativeAdditionalCost);
 	}
 	
 	
@@ -703,15 +668,17 @@ public class PDFServiceImpl extends WaspServiceImpl implements PDFService{
 		
 	}	
 	
-	private Integer addCostSummaryTable(Document document, MPSQuote mpsQuote, List<String>costReasonListExcludingAnalysis, Map<String, Integer>costReasonPriceMapExcludingAnalysis, Integer sequenceAnalysisTotalCost) throws DocumentException{
+	private void addCostSummaryTable(Document document, MPSQuote mpsQuote) throws DocumentException{
 	
 		String currencyIcon = mpsQuote.getLocalCurrencyIcon();
 
 		List<Discount> discounts = mpsQuote.getDiscounts();
 		
-		int totalFinalCost = 0;
+		int totalFinalCost = 0;//discounts already subtracted
 		int totalCosts = 0;
 		int totalDiscounts = 0;
+		int thisCost;
+		PdfPCell secondCell;
 		DecimalFormat twoDFormat = new DecimalFormat("#.##");
 		
 		Paragraph anticipatedCosts = new Paragraph();
@@ -723,49 +690,49 @@ public class PDFServiceImpl extends WaspServiceImpl implements PDFService{
 	    PdfPTable costTable = new PdfPTable(2);
 	    costTable.getDefaultCell().setBorder(0);
 	    costTable.setHorizontalAlignment(Element.ALIGN_LEFT);
-	    costTable.setWidthPercentage(60);
+	    costTable.setWidths(new float[]{5f, 0.9f});
+	    costTable.setWidthPercentage(65f);
 	    
-	    int numberOfESFCosts = 0;
-	    for(String costReason : costReasonListExcludingAnalysis){
-	    	
-	    	costTable.addCell(new Phrase(costReason, NORMAL_BOLD));
-	    	
-	    	int thisCost = costReasonPriceMapExcludingAnalysis.get(costReason).intValue();
-	    	totalCosts += thisCost;
-		    PdfPCell secondCell = new PdfPCell(new Phrase(currencyIcon + " " + thisCost, NORMAL_BOLD));
-		    secondCell.setBorder(0);
-		    secondCell.setHorizontalAlignment(Element.ALIGN_RIGHT);	 		
-	 	    costTable.addCell(secondCell); 
-	 	    
-	 	    numberOfESFCosts++;
-	    }
+	    costTable.addCell(new Phrase("Library Construction", NORMAL_BOLD));
+	    thisCost = mpsQuote.getTotalLibraryConstructionCost().intValue();
+	    totalCosts += thisCost;
+	    secondCell = new PdfPCell(new Phrase(currencyIcon + " " + thisCost, NORMAL_BOLD));
+	    secondCell.setBorder(0);
+	    secondCell.setHorizontalAlignment(Element.ALIGN_RIGHT);	 		
+ 	    costTable.addCell(secondCell); 
+ 
+	    costTable.addCell(new Phrase("Sequencing", NORMAL_BOLD));
+	    thisCost = mpsQuote.getTotalSequenceRunCost().intValue();
+	    totalCosts += thisCost;
+	    secondCell = new PdfPCell(new Phrase(currencyIcon + " " + thisCost, NORMAL_BOLD));
+	    secondCell.setBorder(0);
+	    secondCell.setHorizontalAlignment(Element.ALIGN_RIGHT);	 		
+ 	    costTable.addCell(secondCell); 
+     
+ 	    //have underline at bottom of this cell (prior to a subtotal)
+	    PdfPCell leftHalfAdditionalCostCell = new PdfPCell(new Phrase("Additional Costs", NORMAL_BOLD));
+	    leftHalfAdditionalCostCell.setBorder(Rectangle.BOTTOM);
+	    leftHalfAdditionalCostCell.setBorderWidthBottom(1f);
+	    leftHalfAdditionalCostCell.setHorizontalAlignment(Element.ALIGN_LEFT);
+	    leftHalfAdditionalCostCell.setBorderColorBottom(BaseColor.BLACK);
+ 	    costTable.addCell(leftHalfAdditionalCostCell);
+ 	    thisCost = mpsQuote.getTotalAdditionalCost().intValue();
+ 	    totalCosts += thisCost;
+ 	    PdfPCell rightHalfAdditionalCostCell = new PdfPCell(new Phrase(currencyIcon + " " + thisCost, NORMAL_BOLD));
+ 	    rightHalfAdditionalCostCell.setBorder(Rectangle.BOTTOM);
+ 	    rightHalfAdditionalCostCell.setBorderWidthBottom(1f);
+ 	    rightHalfAdditionalCostCell.setHorizontalAlignment(Element.ALIGN_RIGHT);
+ 	    rightHalfAdditionalCostCell.setBorderColorBottom(BaseColor.BLACK);
+ 	    costTable.addCell(rightHalfAdditionalCostCell);
 
+ 	    costTable.addCell(new Phrase("Sequencing Facility Subtotal", NORMAL_BOLD));
+ 	    secondCell = new PdfPCell(new Phrase(currencyIcon + " " + totalCosts, NORMAL_BOLD));
+ 	    secondCell.setBorder(0);
+ 	    secondCell.setHorizontalAlignment(Element.ALIGN_RIGHT);	 		
+ 	    costTable.addCell(secondCell); 
+   	
 	    if(discounts.size()>0){//APPLY ANY DISCOUNT TO SUBTOTAL OF ESF subtotal (whcih excludes analysis cost)
-	 	    
-	 	    //need subtotal only if there is/are discount(s) AND if numberOfESFCosts > 1
-		    //////////costTable.addCell(new Phrase("Sequencing Facility Subtotal", NORMAL_BOLD));
-	    	if(numberOfESFCosts>1){
-			    PdfPCell leftHalfSubtotalCell = new PdfPCell(new Phrase("Sequencing Facility Subtotal", NORMAL_BOLD));
-			    leftHalfSubtotalCell.setBorder(Rectangle.TOP);
-			    leftHalfSubtotalCell.setBorderWidthTop(2f);
-			    leftHalfSubtotalCell.setHorizontalAlignment(Element.ALIGN_LEFT);
-			    leftHalfSubtotalCell.setBorderColorTop(BaseColor.BLACK);
-		 	    costTable.addCell(leftHalfSubtotalCell);
-		 	    PdfPCell subtotalCell = new PdfPCell(new Phrase(currencyIcon + " " + totalCosts, NORMAL_BOLD));
-		 	    subtotalCell.setBorder(Rectangle.TOP);
-		 	    subtotalCell.setBorderWidthTop(2f);
-		 	    subtotalCell.setHorizontalAlignment(Element.ALIGN_RIGHT);
-		 	    subtotalCell.setBorderColorTop(BaseColor.BLACK);
-		 	    costTable.addCell(subtotalCell);
-	    	}
-	    	
-	 	    //blank line
-	 	    costTable.addCell(new Phrase(" ", NORMAL_BOLD));	 	   
-	 	    PdfPCell secondBlankCell = new PdfPCell(new Phrase(" ", NORMAL_BOLD));
-	 	    secondBlankCell.setBorder(0);
-	 	   	secondBlankCell.setHorizontalAlignment(Element.ALIGN_RIGHT);	 		
-	 	    costTable.addCell(secondBlankCell);
-	 	    
+	 	        	
 	 	    //next add the discounts and get it's discountTotal; note: current options always decrease cost
 	 	    for(Discount discount : discounts){
 	 	    	
@@ -774,7 +741,7 @@ public class PDFServiceImpl extends WaspServiceImpl implements PDFService{
 	 	    		costTable.addCell(new Phrase(discount.getReason() + " (" + percentOff.doubleValue() + discount.getType()+")", NORMAL_BOLD));
 	 	    		Double thisDiscount = Double.valueOf(twoDFormat.format(totalCosts * percentOff / 100));
 	 	    		totalDiscounts += thisDiscount.intValue();
-	 	    		PdfPCell secondCell = new PdfPCell(new Phrase("("+currencyIcon + " " + thisDiscount.intValue()+")", NORMAL_BOLD));
+	 	    		 secondCell = new PdfPCell(new Phrase("("+currencyIcon + " " + thisDiscount.intValue()+")", NORMAL_BOLD));
 		 		    secondCell.setBorder(0);
 		 		    secondCell.setHorizontalAlignment(Element.ALIGN_RIGHT);	 		
 		 	 	    costTable.addCell(secondCell); 
@@ -783,29 +750,35 @@ public class PDFServiceImpl extends WaspServiceImpl implements PDFService{
 	 	    		int thisDiscount = discount.getValue().intValue();//it's stored as float with two fractional decimals ###.##
 	 	    		costTable.addCell(new Phrase(discount.getReason(), NORMAL_BOLD));
 	 	    		totalDiscounts += thisDiscount;
-	 	    		PdfPCell secondCell = new PdfPCell(new Phrase("("+currencyIcon + " " + thisDiscount+")", NORMAL_BOLD));
+	 	    		 secondCell = new PdfPCell(new Phrase("("+currencyIcon + " " + thisDiscount+")", NORMAL_BOLD));
 	 	    		secondCell.setBorder(0);
 	 	    		secondCell.setHorizontalAlignment(Element.ALIGN_RIGHT);	 		
 	 	    		costTable.addCell(secondCell); 	
 	 	    	}
 	 	    }
-	 	    
-		    //blank line
-		    costTable.addCell(new Phrase(" ", NORMAL_BOLD));	 	   
-		    PdfPCell thirdBlankCell = new PdfPCell(new Phrase(" ", NORMAL_BOLD));
-		    thirdBlankCell.setBorder(0);
-		    thirdBlankCell.setHorizontalAlignment(Element.ALIGN_RIGHT);	 		
-		    costTable.addCell(thirdBlankCell);
-
+	 	    	 	    
+	 	    //underline on top of this cell, following all the discounts
+	 	    PdfPCell leftHalfSubtotalMinusDiscountsCell = new PdfPCell(new Phrase("Sequencing Facility Discounted Subtotal ", NORMAL_BOLD));
+	 	    leftHalfSubtotalMinusDiscountsCell.setBorder(Rectangle.TOP);
+	 	    leftHalfSubtotalMinusDiscountsCell.setBorderWidthTop(1f);
+	 	    leftHalfSubtotalMinusDiscountsCell.setHorizontalAlignment(Element.ALIGN_LEFT);
+	 	    leftHalfSubtotalMinusDiscountsCell.setBorderColorTop(BaseColor.BLACK);
+	 	    costTable.addCell(leftHalfSubtotalMinusDiscountsCell);
+	 	    PdfPCell rightHalfSubtotalMinusDiscountsCell = new PdfPCell(new Phrase(currencyIcon + " " + (totalCosts - totalDiscounts), NORMAL_BOLD));
+	 	    rightHalfSubtotalMinusDiscountsCell.setBorder(Rectangle.TOP);
+	 	    rightHalfSubtotalMinusDiscountsCell.setBorderWidthTop(1f);
+	 	    rightHalfSubtotalMinusDiscountsCell.setHorizontalAlignment(Element.ALIGN_RIGHT);
+	 		rightHalfSubtotalMinusDiscountsCell.setBorderColorTop(BaseColor.BLACK);
+	 	    costTable.addCell(rightHalfSubtotalMinusDiscountsCell);	 	    
 	    }
 	    
 	    //sequence analysis cost (which is the computational cost)
-	    int computationalCost = sequenceAnalysisTotalCost.intValue();
+	    int computationalCost = mpsQuote.getTotalComputationalCost().intValue();
 	    
-	    if(discounts.size()>0){
-	    	costTable.addCell(new Phrase("Computational Analysis\n(discount not applicable)", NORMAL_BOLD)); 
+	    if(computationalCost > 0 && discounts.size()>0){
+	    	costTable.addCell(new Phrase("Computational Analysis (discount not applicable)", NORMAL_BOLD)); 
 	    }
-	    else{
+	    else{//either no discounts or computational cost is 0
 	    	costTable.addCell(new Phrase("Computational Analysis", NORMAL_BOLD));
 	    }    	
     	totalCosts += computationalCost;
@@ -814,13 +787,12 @@ public class PDFServiceImpl extends WaspServiceImpl implements PDFService{
 	    secondCellForComputationalCost.setHorizontalAlignment(Element.ALIGN_RIGHT);	 		
  	    costTable.addCell(secondCellForComputationalCost); 	
 	    
- 	    //blank line
+ 	    //blank line; add a little space
 	    costTable.addCell(new Phrase(" ", NORMAL_BOLD));	 	   
 	    PdfPCell thirdBlankCell = new PdfPCell(new Phrase(" ", NORMAL_BOLD));
 	    thirdBlankCell.setBorder(0);
 	    thirdBlankCell.setHorizontalAlignment(Element.ALIGN_RIGHT);	 		
-	    costTable.addCell(thirdBlankCell); 
-	    
+	    costTable.addCell(thirdBlankCell); 	    
 	    
 	   	totalFinalCost = totalCosts - totalDiscounts;
 	   	if(totalFinalCost < 0){
@@ -847,9 +819,13 @@ public class PDFServiceImpl extends WaspServiceImpl implements PDFService{
 	 	    
 	 	document.add(costTable);		
 		
-		return new Integer(totalFinalCost);
+		//do NOT forget this:
+	 	//record totalDiscountCost (total of all discounts) in mpsQuote for later use in the generation of summary cost for this pdf AND for database storage
+		//record totalFinalCost (discounts have been subtracted) in mpsQuote for later use in the generation of summary cost for this pdf AND for database storage
+	 	mpsQuote.setTotalDiscountCost(Integer.valueOf(totalDiscounts));
+	 	mpsQuote.setTotalFinalCost(Integer.valueOf(totalFinalCost));	
+	 	
 	}
-
 
 	
 	public void buildJobSampleReviewPDF(Job job, OutputStream outputStream)throws DocumentException, MetadataException{
